# mydocker

./: CMakeLists.txt  README.md  compile.sh
dockerfiles/: mydockerfile.json  mydockerfile1.json
include/: container_cfg.h  mycontainer.h  mydocker.h
socket_stuff/: client.py  server.py
src/: main.cpp  mycontainer.cpp  mydocker.cpp
test_binary/: main.cpp
test_cgroups/: cgroups.cpp  cgroups.h  main.cpp
test_chroot/: main.cpp  setup_root.cpp  setup_root.h
test_create_namespace/: create_namespace.cpp  create_namespace.h  main.cpp
test_mount_volumes/: README.md  bind_mount.cpp  bind_mount.h  main.cpp  main_ns.cpp  mount_namespaces.cpp  mount_namespaces.h
test_pipes/: main.cpp
test_redirections/: main.cpp
test_socket/: client.py  helper_functions.cpp  helper_functions.h  main.cpp  socket_functions.cpp  socket_functions.h  test_input.py
